gcc/testsuite/rust/rustc/ui/issues/issue-51022.rs
fn main<'a>() { }
// { dg-error ".E0131." "" { target *-*-* } .-1 }

